# pvsync-operator

./: Cargo.toml  Dockerfile  README.md  example.env
config/crd/: pvsync.storage.cndev.nl.yaml
config/operator/chart/: Chart.yaml  values.yaml
config/operator/chart/templates/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml
config/operator/chartgg/: values.yaml
config/operator/chartgg/templates/: _helpers.tpl  clusterrole.yaml  serviceaccount.yaml
config/samples/: pvsync-example.yaml  pvsync-protected-example.yaml  pvsync-recovery-example.yaml  test-pv-nolabel.yaml  test-pv.yaml
src/: crd.rs  external_watcher.rs  extwatcher.rs  finalizer.rs  generic_status.rs  lib.rs  main.rs  objectstorage.rs  resource.rs  status.rs  storage.rs  utils.rs
