[package]
name = "pvsync"
version = "0.1.0"
edition = "2024"

[dependencies]
object_store = { version = "0.12.4", features = ["aws", "azure"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1"
bincode = "1"
url = "2"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
tokio-stream = { version = "0.1.17", features = ["fs"] }
kube = { version = "1.1.0", default-features = true, features = [
    "derive",
    "runtime",
] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.25.0", default-features = false, features = ["v1_33"] }
futures = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
schemars = "0.8"
garde = { version = "0.16.1", default-features = false, features = ["derive"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.3"
anyhow = "1.0"
thiserror = "1"    # Custom Error definitions and convenient error mappings
chrono = "0.4"
kube-runtime = "1.1.0"
async-trait = "0.1.88"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
